# polars-rust-samples

./: Cargo.toml  LICENSE  README.md
data/: worldcities.parquet
src/: main.rs
