[package]
name = "polars-rust-samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
polars = { version = "0.37.0", features = ["lazy", "parquet", "rows", "dtype-struct", "dtype-full", "rolling_window", "partition_by", "concat_str"] }
rayon = "1.8.1"
dashmap = { version = "5.5.3", features = ["rayon"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"